tests/fail/fail_pal_move_locked.tk
// tests/fail/fail_pal_move_locked.tk

shape Point(
    x: i32
)

fn main() -> i32 {
    auto ^p = new Point(x = 10)
    
    // Create an active borrow
    auto &r = &p
    
    // ERROR: p is locked by r. Cannot transfer ownership.
    // EXPECT: error[E0440]: Cannot move 'p' while it is borrowed
    auto ^q = ^p
    
    return r.x
}

// EXPECT: error[E0440]:
