tests/fail/fail_pal_move_locked.stderr
tests/fail/fail_pal_move_locked.tk:15:15: error[E0440]: Cannot move 'p' while it is borrowed
